docs(preview): the JEP 401 section describes the sweep, not its first six carriers
PREVIEW-TRACK.md's "six carriers are value classes here" was false the moment the
first batch landed, and its bytecode control named FlowSnapshot -- a carrier this
sweep converted, so the control had quietly become a converted type. Both fixed,
along with the counts in the document's own delta summary and its "still to do"
list.

The section is now the reusable artefact rather than a record of what happened:
the D0-D8 rubric with the command that answers each, the explicit non-disqualifiers
(a MethodHandle, an Arena, a live service, an Object used as a monitor elsewhere --
each compiled to confirm), the two deliberate exclusions with reasons, and the
registry design with its three non-vacuity guards.

Two corrections of substance:

The silent-semantics table gains a FOURTH row. compareAndSet with a non-null
expected value degrades from "only if nobody swapped this exact object" to "only if
the contents still look like this" -- specified against ==, and on JDK 28 Unsafe
takes a substitutability path for value objects. It is the one that actually blocked
a conversion here, and it was missing from the table that existed to warn about
exactly this class of change.

JEP 539 moves from "not yet exercised" to exercised-but-only-incidentally. Every
value class gets strict field initialization, so all 159 carriers now carry it;
nothing exercises it deliberately, and it constrained only the two hand-written
value classes. Recording it as done would overstate it.

Also states what the sweep does NOT claim: no benchmark exists, most of these
carriers hold reference components and will not flatten, and the one open question
-- whether the conversion widened a JFR test's race window -- is written down as
unresolved rather than dropped.

The v0.11.0 release notes said three gates cannot run on the preview line. It has
been four since #307, and Checkstyle is the one worth separating because it fails
